--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
             const uuid = urlParams.get('uuid');
             const return_url = urlParams.get('return_url');
             const cancel_url = urlParams.get('cancel_url');
-            
-            window.payfast_do_onsite_payment({"uuid":uuid}, function (result) {
-                if (result === true) {
-                    // Payment Completed
-                    location.href = return_url || 'completed'; // triggers payment completed widget on app
-                }
-                else {
-                    // Payment Window Closed
-                    location.href = cancel_url || 'closed'; // triggers payment cancelled widget on app
-                }
-            }); 
+
+            if (return_url?.trim() && cancel_url?.trim()){
+                window.payfast_do_onsite_payment({
+                  "uuid":"123-abc",
+                  "return_url":return_url,
+                  "cancel_url":cancel_url
+                });
+            }else{
+                window.payfast_do_onsite_payment({"uuid":uuid}, function (result) {
+                    if (result === true) {
+                        // Payment Completed
+                        location.href = 'completed'; // triggers payment completed widget on app
+                    }
+                    else {
+                        // Payment Window Closed
+                        location.href = 'closed'; // triggers payment cancelled widget on app
+                    }
+                });
+            }
         </script>
 </body>
 </html>
