--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             const return_url = urlParams.get('return_url');
             const cancel_url = urlParams.get('cancel_url');
 
-            if (return_url?.trim() && cancel_url?.trim()){
+            if (return_url && return_url.trim() !== '' && cancel_url && cancel_url.trim() !== ''){
                 window.payfast_do_onsite_payment({
-                  "uuid":"123-abc",
+                  "uuid":uuid,
                   "return_url":return_url,
                   "cancel_url":cancel_url
                 });
