--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 }
                 else {
                     // Payment Window Closed
-                    location.href = cancel_url ? decodeURIComponent(cancel_url) : 'null'; // triggers payment cancelled widget on app
+                    location.href = cancel_url ? decodeURIComponent(cancel_url) : 'closed'; // triggers payment cancelled widget on app
                 }
             });
         </script>
