--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             const return_url = urlParams.get('return_url'); // -> add to support web
             const cancel_url = urlParams.get('cancel_url'); // -> add to support web
 
-            window.payfast_do_onsite_payment({"uuid":uuid}, function (result) {
+            window.payfast_do_onsite_payment({"uuid":uuid, "subscription_type":"2"}, function (result) {
                 if (result === true) {
                     // Payment Completed
                     location.href = return_url ? decodeURIComponent(return_url) : 'completed'; // triggers payment completed widget on app
